<resources>
    <string name="accion_mostrar">Mostrar Lugares</string>
    <string name="accion_preferencias">Preferencias</string>
    <string name="accion_acerca_de">Acerca de </string>
    <string name="accion_salir">Salir</string>
    <string name="app_name">Mis Lugares</string>
    <string name="action_settings">Settings</string>
    
    <string name="nombre_txt"> Nombre:</string>
    <string name="nombre_help"> algo que identifique el lugar </string>
    <string name="tipo">Tipo</string>
    <string name="direccion">Direccion:</string>
    <string name="direccion_lugar">direccion del lugar</string>
    <string name="telefono">Telefono:</string>
    <string name="telefono_help">telefono para contactar</string>
    <string name="url">Url</string>
    <string name="paginaweb">pagina web</string>
    <string name="comentario">Comentario:</string>
    <string name="notas">introduce tus notas </string>
</resources>
