<?xml version="1.0" encoding="utf-8" ?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:showIn="@layout/activity_main"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">


    <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <TextView
        android:id="@+id/t_nombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        tools:text="@string/nombre_txt" />

    <EditText
        android:id="@+id/nombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:layout_below="@id/t_nombre"
        android:hint="algo que identifique el lugar" />



    <TextView
        android:id="@+id/t_tipo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/nombre"
        android:textAppearance="?android:attr/textAppearanceMedium"
        tools:text="@string/tipo" />

    <Spinner
        android:id="@+id/tipo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/t_tipo"
        android:layout_toRightOf="@id/t_tipo"/>

    <TextView
        android:id="@+id/t_direccion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/direccion"
        android:textSize="18sp"
        android:layout_below="@id/t_tipo"/>

    <EditText
        android:id="@+id/direccion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPostalAddress"
        android:layout_below="@id/t_direccion"
        tools:text="@string/direccion_lugar" />

    <TextView
        android:id="@+id/t_telefono"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/telefono"
        android:layout_below="@id/t_direccion"/>

    <EditText
        android:id="@+id/telefono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="123456789"
        android:inputType="phone"
        android:layout_toRightOf="@id/t_telefono"
        android:layout_alignTop="@id/t_telefono"
        android:text="@string/telefono_help" />

    <TextView
        android:id="@+id/t_url"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/url"
        android:layout_below="@id/t_telefono"/>

    <EditText
        android:id="@+id/url"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textUri"
        android:layout_below="@id/t_url"
        android:text="@string/paginaweb" />

    <TextView
        android:id="@+id/t_comentario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/comentario"
        android:layout_below="@id/t_comentario"/>

    <EditText
        android:id="@+id/comentario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textMultiLine"
        android:text="@string/notas"
        android:layout_below="@id/t_comentario"/>

</RelativeLayout>



</android.support.v4.widget.NestedScrollView>
